Fix select icon alignment

--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -29,14 +29,14 @@
     color: var(--body-color);
   }
 
-  i {
+  .icon {
     display: flex;
     height: 30px;
     font-size: 1.5rem;
     pointer-events: none;
     position: absolute;
     right: 0;
-    top: .25rem;
+    top: .2rem;
     width: 30px;
   }
 
