--- a/src/styles/components/sites/_page-search.scss
+++ b/src/styles/components/sites/_page-search.scss
@@ -26,14 +26,13 @@
 
     .icon {
       display: flex;
-      height: 2rem;
-      font-size: 2rem;
-      line-height: 2.2rem;
+      height: 30px;
+      font-size: 1.5rem;
       pointer-events: none;
       position: absolute;
-      right: .25rem;
-      top: .15rem;
-      width: 2rem;
+      right: 0;
+      top: 0.3rem;
+      width: 30px;
     }
   }
 
